Consumo de API criptomoedas |Digital Innovation|

--- a/README.html
+++ b/README.html
@@ -32,24 +32,15 @@ software são transferidas de um aplicativo para outro.
 
 <h2>Estudos realizados: </h2>
 
-<ol>
-    <li>
-        <h4>Consumo de API criptomoedas;</h4>
-    </li>
-    <li>
-        <h4>JavaScript <ul>
-                <li>fetch</li>
-                <li>then</li>
-                <li>catch</li>
-                <li>response</li>
-                <li>getElementById</li>
-                <li>template literals</li>
-                <li>entre outros</li>
 
-            </ul>
-        </h4>
-    </li>
-    <li>
-        <h4>Implementação dos dados da API no browser </h4>
-    </li>
-</ol>
+<h4>Consumo de API criptomoedas;</h4>
+
+<h4>JavaScript </h4> </b>
+<span>fetch</span></b>
+<span>then</span></b>
+<span>catch</span></b>
+<span>response</span></b>
+<span>getElementById</span></b>
+<span>template spanterals</span></b>
+<span>entre outros</span>
+<h4>Implementação dos dados da API no browser </h4>
